# guide3d

./: README.md  pyproject.toml
scripts/: make_annotation_file.py  parse_cvat.py
src/: annot_parser.py  fn.py  plot.py  utils.py  vars.py  viz.py
src/annot_parser/: __init__.py
src/assets/: mesh.stl
src/calibration/: __init__.py  calibration.py  refinement.py
src/calibration/2024-01-18/: 2024.xma  framespec_cm.csv
src/calibration/2024-01-18/matrices/: 16709.txt
src/dataset/: __init__.py  dataset_utils.py  flat.py  segment.py  video.py
src/dataset/video/: spline.py
src/dl/: __init__.py  dl_utils.py  parser.py  segment_dataset.py
src/fig/: make_samples.py  matching.py  reconstruction.py
src/guide3d/assets/: transformation_matrix.npy
src/guide3d/calibration/: __init__.py
src/guide3d/dataset/: image.py  segment.py
src/guide3d/reconstruction/: __init__.py  epipolar_reconstruct.py  simple.py  triangulation.py  undistortion.py
src/guide3d/scratch/: curve_rerpesentation_2d.py  curve_rerpesentation_3d.py
src/guide3d/utils/: plot.py  utils.py  viz.py
src/reconstruct/: __init__.py  epipolar.py  epipolar_scratch.py  optimization.py  reconstruct.py  scratch.py
src/reconstruction/: epipolar_reconstruct.py  reconstruction_plot.py
src/reconstruction/epipolar/: fig.py  plot.py  utils.py  viz.py
src/representations/: curve.py
src/representations/curve/: __init__.py  viz.py
src/scratch/: annotation_maker.py  curve_rerpesentation_2d.py  refinement.py
src/utils/: fn.py  plot.py  utils.py  viz.py
src/utils/viz/: __init__.py
(+10 files in other folders)
